--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "this is the backend of ecommerse website",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/index.server.js"
+    "start": "nodemon ./src/index.server.js"
   },
   "keywords": [
     "backend",
@@ -16,7 +16,6 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
-    "cloudinary": "^1.25.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
