--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "this is the backend of ecommerse website",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/index.server.js"
+    "start": "node ./src/index.server.js"
   },
   "keywords": [
     "backend",
